--- a/package.json
+++ b/package.json
@@ -1,18 +1,91 @@
 {
-  "name": "burger-nav",
-  "version": "0.1.0",
-  "private": true,
+  "name": "capslok-lib",
+  "version": "0.0.1",
+  "main": "index.js",
+  "scripts": {
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "test": "jest --watch",
+    "cover": "jest --coverage",
+    "coverview": "pushstate-server coverage/lcov-report/",
+    "build": "rm -rf ./dist && npm run b",
+    "b": "babel -d dist/ lib/ --copy-files"
+
+  },
   "dependencies": {
     "react": "^16.5.1",
     "react-dom": "^16.5.1"
   },
   "devDependencies": {
-    "react-scripts": "1.1.5"
+    "@storybook/react": "^3.4.11",
+    "babel-core": "^6.26.3",
+    "babel-cli": "^6.14.0",
+    "babel-jest": "^22.0.4",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^2.0.1",
+    "babel-plugin-syntax-trailing-function-commas": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.11.5",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2016": "^6.11.3",
+    "babel-preset-react": "^6.11.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^22.0.4",
+    "pushstate-server": "^3.0.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 3 Chrome versions",
+              "not dead"
+            ]
+          }
+        }
+      ],
+      "react"
+    ],
+    "plugins": [
+      "babel-plugin-syntax-trailing-function-commas",
+      "babel-plugin-transform-class-properties",
+      "babel-plugin-transform-object-rest-spread",
+      "babel-plugin-transform-react-constant-elements"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "lib/**/*.{js,jsx,mjs}"
+    ],
+    "testMatch": [
+      "<rootDir>/**/__tests__/**/*.{js,jsx,mjs}",
+      "<rootDir>/**/?(*.)(spec|test).{js,jsx,mjs}"
+    ],
+    "testEnvironment": "jsdom",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/jest-config/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/jest-config/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "mjs",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ]
   }
 }
