--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capslok-lib",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "index.js",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook",
@@ -40,12 +40,7 @@
       [
         "env",
         {
-          "targets": {
-            "browsers": [
-              "last 3 Chrome versions",
-              "not dead"
-            ]
-          }
+          "targets": "> 0.25%, not dead"
         }
       ],
       "react"
